# det

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  pr_agent.yml  setup-poetry.yml
det/: __init__.py  helpers.py  main.py
det/det_response/: analysis.py  presentation.py  semantic_distance.py
det/embeddings/: adapters.py  cache.py  generator.py
det/llm/: base.py  llm_groq.py  llm_langchain.py  llm_ollama.py  llm_openai.py  llm_openai_function.py
det/utils/: exceptions.py  llm_handler.py  prompt_manager.py
docs/check_chain/: Cusomtisation.md  README.md
resources/: prompts.json  risk_definition.py  tools.json
templates/: CHANGELOG.md.j2
tests/mocks/: mock_llm.py  mock_llm_handler.py
tests/unit/: conftest.py  test_helpers.py  test_llm_langchain.py  todo
tests/unit/embeddings/: test_openai_embedding_generator_adapter.py
