[tool.poetry]
name = "det"
version = "0.1.0"
description = "A framework to analyse the consistency of repeated requests to an LLM or LLM based Agent"
authors = ["Matthew Thompson <thompsonson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
typer = "^0.9.0"
rich = "^13.7.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
det = "det.main:app"
