[tool.poetry]
name = "det"
version = "0.1.2"
description = "A framework to analyse the consistency of repeated requests to an LLM or LLM based Agent"
authors = ["Matthew Thompson <thompsonson@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thompsonson/det"
repository = "https://github.com/thompsonson/det"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
typer = "^0.9.0"
rich = "^13.7.0"
numpy = "^1.26.4"
ollama = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
isort = "^5.13.2"
ruff = "^0.2.2"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
det = "det.main:app"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
upload_to_pypi = true
branch = "main"
repository = "https://github.com/thompsonson/det"
