[tool.poetry]
name = "det"
version = "0.3.0"
description = "A framework to analyse the consistency of repeated requests to an LLM or LLM based Agent"
authors = ["Matthew Thompson <thompsonson@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thompsonson/det"
repository = "https://github.com/thompsonson/det"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
typer = "^0.9.0"
rich = "^13.7.0"
numpy = "^1.26.4"
ollama = "^0.1.6"
langchain = "^0.1.12"
langchain-community = "^0.0.29"
langchain-openai = "^0.1.1"
deepdiff = "^6.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
isort = "^5.13.2"
ruff = "^0.2.2"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
python-semantic-release = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
det = "det.main:app"

[tool.semantic_release]
version_variable = [
    "det/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:rev: v{version}"
]
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "poetry build"
